--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=kFroAXEAAAAJ&hl=en"
   email            : "sidgautam1995@gmail.com"
-  researchgate     :  "https://www.researchgate.net/profile/Siddhant_Gautam2"
+  researchgate     : "https://www.researchgate.net/profile/Siddhant_Gautam2"
   uri              :
   bitbucket        :
   codepen          :
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/siddhant-gautam-5896081b1/
+  linkedin         : siddhant-gautam-5896081b1/
   orcid            : "https://orcid.org/0000-0002-2226-8134"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "sidgautam95"
+  twitter          : #"sidgautam95"
   vine             :
   weibo            :
   xing             :
