--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=kFroAXEAAAAJ&hl=en"
-  email            : "sidgautam1995@gmail.com"
+  email            : "gautamsi@msu.edu"
   researchgate     : "https://www.researchgate.net/profile/Siddhant_Gautam2"
   uri              :
   bitbucket        :
